syntax = "proto3";

package calculator;

option java_package= "com.proto.calculator";
option java_multiple_files = true;

//Sum of two numbers
message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}
message SumResponse {
    int32 sum_result = 1;
}
//Prime Number Decomposition
message PrimeNumberDecompositionRequest{
    int64 number = 1;
}
message PrimeNumberDecompositionResponse{
    int64 prime_number =1;
}

service CalculatorService{
    //
    rpc sum(SumRequest) returns (SumResponse) {};
    //
    rpc primeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}